Bug 15700 - crash when readlinkat fails
Summary: crash when readlinkat fails
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-23 07:51 UTC by Volker Lendecke
Modified: 2024-08-27 13:13 UTC (History)
2 users (show)

See Also:


Attachments
Patch for 4.19 and above (1.79 KB, patch)
2024-08-23 10:02 UTC, Volker Lendecke
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Lendecke 2024-08-23 07:51:03 UTC
https://gitlab.com/samba-team/samba/-/merge_requests/3772 needs backporting
Comment 1 Samba QA Contact 2024-08-23 09:28:03 UTC
This bug was referenced in samba master:

168966a053045476a84044aa73f66722eb702fe0
Comment 2 Volker Lendecke 2024-08-23 10:02:20 UTC
Created attachment 18418 [details]
Patch for 4.19 and above
Comment 3 Ralph Böhme 2024-08-23 10:04:24 UTC
Reassigning to Jule for inclusion in 4.19, 4.20 and 4.21.
Comment 4 Jule Anger 2024-08-26 09:26:53 UTC
Pushed to autobuild-v4-{21,20,19}-test.
Comment 5 Samba QA Contact 2024-08-26 10:26:03 UTC
This bug was referenced in samba v4-19-test:

a92076d88bfbf19ef1c0aed461f75b2c8e799292
Comment 6 Samba QA Contact 2024-08-26 11:10:04 UTC
This bug was referenced in samba v4-21-test:

37bbe0ca09e4b8db52937b0b9bc9c9fad47a115f
Comment 7 Samba QA Contact 2024-08-26 15:46:03 UTC
This bug was referenced in samba v4-20-test:

f7dc86c173e6c766ffc5df09f58d2086e3c6a7eb
Comment 8 Jule Anger 2024-08-27 12:28:22 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2024-08-27 13:13:57 UTC
This bug was referenced in samba v4-21-stable (Release samba-4.21.0rc4):

37bbe0ca09e4b8db52937b0b9bc9c9fad47a115f